<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Attendece Managment</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="generate_qr">Generate QR</string>
    <string name="verify_attendence">Verify Attendence</string>
    <string name="submitButton">Submit</string>
    <string name="usinggpsText">UsingGps</string>
    <string name="using_qr">Using QR</string>
    <string name="using_pin">Using PIN</string>
    <string name="present_absent_text">You are Present</string>
    <string name="done">Done</string>
    <string name="try_again">Try Again</string>
    <string name="adress">Adress :</string>
    <string name="phone_no">Phone No :</string>
    <string name="registaration_no">Reg No :</string>
    <string name="semister">Semister :</string>
    <string name="name">Name :</string>
    <string name="view_detail">View Detail</string>
    <string name="profile">Profile</string>
    <string name="subjects">Subject</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="sample_subjects">Temporary Subjects</string>
    <string name="all_subjects_detail">All Subjects Detail</string>
</resources>
