<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="12"
    tools:context=".user_attendence_firstActivity">

    <LinearLayout
        android:layout_weight="9"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/userProfile"
            android:src="@drawable/iconUser">
        </de.hdodenhof.circleimageview.CircleImageView>

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_weight="3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="@string/using_qr" />
        <Button
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="@string/using_pin" />
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usinggpsText"></TextView>

            <CheckBox
                android:id="@+id/isGps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </CheckBox>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>